fixed spacing

--- a/src/components/device/device.scss
+++ b/src/components/device/device.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   width: 80%;
   background-color: lighten(lime, 50%);
-  margin: 0.25rem auto;
+  margin: 0.5rem auto;
   box-shadow: 0 0 1rem lighten(black, 80%);
   &:hover {
     box-shadow: 0 0 1rem lighten(black, 85%);
