--- a/src/components/device/packet/packet.scss
+++ b/src/components/device/packet/packet.scss
@@ -5,7 +5,6 @@ $fa-font-path: '../../../../node_modules/font-awesome/fonts';
   display: flex;
   border-top: 1px solid lighten(black, 90%);
   position: relative;
-  margin-top: 0.5rem;
   padding: 0.5rem;
   z-index: 10;
 }
